<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".activities.OnBoardingActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_75"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>

    <ImageView
        android:id="@+id/on_boarding_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_25"
        app:layout_constraintBottom_toTopOf="@id/guideline_75"
        android:adjustViewBounds="true"
        tools:src="@drawable/on_boarding_1"
        android:contentDescription="@string/on_boarding_image_content_description" />

    <TextView
        android:id="@+id/on_boarding_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/on_boarding_image_view"
        tools:text="Description"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_arrow_right"
        app:backgroundTint="@color/blue"
        android:tint="@android:color/white"
        app:tint="@android:color/white"
        android:contentDescription="@string/fab_next_text"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_arrow_left"
        app:backgroundTint="@color/blue"
        android:tint="@android:color/white"
        app:tint="@android:color/white"
        android:contentDescription="@string/fab_back_text"/>

    <Button
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/next_button"
        app:layout_constraintBottom_toBottomOf="@id/next_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintEnd_toStartOf="@id/next_button"
        android:text="@string/button_get_started_text"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>