...
    <string name="tab_icon_search_title">Search word</string>
    <string name="tab_icon_synchro_title">Get resources</string>
    <string name="search_button_text">Search</string>
    <string name="search_edit_text_hint">Search something</string>
    <string name="tab_icon_login_title">Login</string>
    <string name="tab_icon_logout_title">Logout</string>
    <string name="sp_file_name">MySharedPref</string>
    <string name="is_syncing_sp">is_syncing</string>
    <string name="username_sp">username</string>
    <string name="email_sp">email</string>
    <string name="token_sp">token</string>
    <string name="picture_sp">picture</string>
    <string name="bio_sp">bio</string>
    <string name="badges_sp">badges</string>
    <string name="is_first_access">is_first_access</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button_text">Login</string>
    <string name="choose_language_label">Select a language</string>
    <string name="greeting_text">Welcome back, %1$s</string>
    <string name="tab_icon_rankings_title">Rankings</string>
...
    <string name="faq_4_title">How much does it cost?</string>
    <string name="faq_4_description">It\'s free :)</string>
    <string name="faq_activity_title">FAQ</string>
    <string name="fab_next_text">Next</string>
    <string name="fab_back_text">Back</string>
    <string name="on_boarding_1">Welcome to Pajelingo! We are here to help you to learn foreign languages :)</string>
    <string name="on_boarding_2">We have several games and a powerful search tool for you, without registration! However, your experience is even better with an account :)</string>
    <string name="on_boarding_3">Happy learning!</string>
    <string name="button_get_started_text">Get started</string>
    <string name="signup_link"><u>Don\'t have an account? Sign up</u></string>
    <string name="update_account_activity_title">Update account</string>
    <string name="signup_activity_title">Sign up</string>
    <string name="login_link"><u>Already has an account? Login</u></string>
    <string name="signup_button_text">Create account</string>
...
